update readme file

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This AirBnb Clone - The Console project was contributed by:
 	
-	#Rodgers Mogaka <mogakaroy@gmail.com>
-	#Keith Koki <kokikeith@gmail.com>
+Rodgers Mogaka <mogakaroy@gmail.com>
+Keith Koki <kokikeith@gmail.com>
